// Copyright 2021 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package com.google.firebase.encoders.proto;

option java_multiple_files = true;
option java_package = "com.google.firebase.encoders.proto";

// Configuration for the "encoders" protoc plugin.
message CodeGenConfig {
  // Java package that all proto messages will be generated in.
  //
  // All messages will be generated in the following package: "${vendor_package}.${file_package}
  // For example, if vendor_package is set to com.foo, com.example.MyMessage will end up in the
  // "com.foo.com.example.MyMessage".
  string vendor_package = 1;

  // List of fully qualified proto messages that code needs to be generated for.
  //
  // Note that you only need to specify your "root" messages, any messages referenced by it, will
  // automatically be included in codegen as well.
  repeated string include = 2;
}
